--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "cover": "cross-env NODE_ENV=test nyc npm t"
   },
   "dependencies": {
-    "@verdaccio/file-locking": "0.0.5",
-    "@verdaccio/streams": "0.0.2",
-    "memory-streams": "0.1.2"
+    "@verdaccio/streams": "^0.0.2",
+    "http-errors": "1.6.2",
+    "memory-fs": "^0.4.1"
   },
   "devDependencies": {
-    "@verdaccio/types": "0.1.0",
+    "@verdaccio/types": "0.1.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
