--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "cross-env": "5.1.3",
     "eslint": "4.16.0",
     "eslint-config-google": "0.9.1",
-    "eslint-plugin-flowtype": "2.42.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "2.42.0",
     "eslint-plugin-jest": "21.7.0",
     "eslint-plugin-prettier": "^2.5.0",
+    "express": "^4.16.2",
     "flow-bin": "0.52.0",
     "flow-runtime": "0.16.0",
     "husky": "0.14.3",
@@ -59,7 +60,11 @@
     ]
   },
   "lint-staged": {
-    "*.js": ["npm run format", "npm run lint", "git add"]
+    "*.js": [
+      "npm run format",
+      "npm run lint",
+      "git add"
+    ]
   },
   "author": "Juan Picado <juanpicado19@gmail.com>",
   "private": false,
