--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "storage implementation in memory",
   "main": "lib/index.js",
   "scripts": {
+    "release": "standard-version -a -s",
     "pretest": "npm run lint",
     "test": "jest",
     "precommit": "lint-staged",
@@ -20,32 +21,33 @@
     "memory-fs": "^0.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "6.0.2",
-    "@commitlint/config-conventional": "6.0.4",
-    "@commitlint/travis-cli": "6.0.2",
-    "@verdaccio/types": "2.2.0",
+    "@commitlint/cli": "7.0.0",
+    "@commitlint/config-conventional": "7.0.1",
+    "@commitlint/travis-cli": "7.0.0",
+    "@verdaccio/types": "3.3.0",
     "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.2.3",
-    "babel-jest": "22.1.0",
-    "babel-plugin-flow-runtime": "0.15.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.6",
+    "babel-jest": "23.4.0",
+    "babel-plugin-flow-runtime": "0.17.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-flow": "6.23.0",
-    "cross-env": "5.1.3",
-    "eslint": "4.16.0",
+    "cross-env": "5.2.0",
+    "eslint": "5.1.0",
     "eslint-config-google": "0.9.1",
-    "eslint-plugin-flowtype": "2.46.2",
     "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-jest": "21.7.0",
-    "eslint-plugin-prettier": "2.5.0",
-    "flow-bin": "0.70.0",
-    "flow-runtime": "0.16.0",
+    "eslint-plugin-flowtype": "2.50.0",
+    "eslint-plugin-jest": "21.17.0",
+    "eslint-plugin-prettier": "2.6.2",
+    "flow-bin": "0.76.0",
+    "flow-runtime": "0.17.0",
     "husky": "0.14.3",
-    "jest": "22.1.4",
-    "lint-staged": "6.1.0",
-    "prettier": "1.12.0",
-    "rmdir-sync": "1.0.1"
+    "jest": "23.4.1",
+    "lint-staged": "7.2.0",
+    "prettier": "1.13.7",
+    "rmdir-sync": "1.0.1",
+    "standard-version": "4.3.0"
   },
   "keywords": [
     "verdaccio",
