--- a/package.json
+++ b/package.json
@@ -11,43 +11,45 @@
     "format": "prettier --single-quote --trailing-comma none --write \"{src,test}/**/*.js\"",
     "lint": "npm run flow && eslint .",
     "flow": "flow",
+    "coverage": "codecov",
     "prepublish": "npm run build",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "build": "babel src/ --out-dir lib/ --copy-files --ignore ___tests___"
   },
   "dependencies": {
     "@verdaccio/streams": "^1.0.0",
-    "http-errors": "1.7.0",
+    "http-errors": "1.7.1",
     "memory-fs": "^0.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.0.0",
-    "@commitlint/config-conventional": "7.0.1",
-    "@commitlint/travis-cli": "7.0.0",
-    "@verdaccio/types": "3.3.0",
+    "@commitlint/cli": "7.2.0",
+    "@commitlint/config-conventional": "7.1.2",
+    "@commitlint/travis-cli": "7.2.0",
+    "@verdaccio/types": "4.1.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.6",
-    "babel-jest": "23.4.2",
+    "babel-jest": "23.6.0",
     "babel-plugin-flow-runtime": "0.17.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-flow": "6.23.0",
+    "codecov": "3.0.4",
     "cross-env": "5.2.0",
-    "eslint": "5.1.0",
-    "eslint-config-google": "0.9.1",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-flowtype": "2.50.0",
-    "eslint-plugin-jest": "21.17.0",
-    "eslint-plugin-prettier": "2.6.2",
-    "flow-bin": "0.76.0",
+    "eslint": "5.6.1",
+    "eslint-config-google": "0.10.0",
+    "eslint-config-prettier": "3.1.0",
+    "eslint-plugin-flowtype": "2.50.3",
+    "eslint-plugin-jest": "21.24.1",
+    "eslint-plugin-prettier": "3.0.0",
+    "flow-bin": "0.82.0",
     "flow-runtime": "0.17.0",
     "husky": "0.14.3",
-    "jest": "23.4.2",
-    "lint-staged": "7.2.0",
-    "prettier": "1.14.0",
+    "jest": "23.6.0",
+    "lint-staged": "7.3.0",
+    "prettier": "1.14.3",
     "rmdir-sync": "1.0.1",
-    "standard-version": "4.3.0"
+    "standard-version": "4.4.0"
   },
   "keywords": [
     "verdaccio",
