--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "presets": [["env", {
-    "targets": {
-      "node": "6"
-    }
-  }], "flow"]
+  "presets": [["@verdaccio", {"typescript": true}]]
 }
