--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "test": "jest",
     "precommit": "lint-staged",
     "format": "prettier --single-quote --trailing-comma none --write \"{src,test}/**/*.js\"",
-    "lint": "npm run flow && eslint .",
-    "flow": "flow",
+    "lint": "eslint .",
     "coverage": "codecov",
-    "prepublish": "npm run build",
     "commitmsg": "commitlint -e $GIT_PARAMS",
-    "build": "babel src/ --out-dir lib/ --copy-files --ignore ___tests___"
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "build": "npm run build:types && npm run build:js",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src/ --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "dependencies": {
-    "@verdaccio/streams": "^1.0.0",
+    "@verdaccio/streams": "2.0.0-beta.0",
     "http-errors": "1.7.1",
     "memory-fs": "^0.4.1"
   },
@@ -25,31 +27,27 @@
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
-    "@verdaccio/types": "4.1.1",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-jest": "23.6.0",
-    "babel-plugin-flow-runtime": "0.17.0",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-flow": "6.23.0",
+    "@types/http-errors": "^1.6.1",
+    "@types/jest": "^23.3.13",
+    "@types/memory-fs": "^0.3.2",
+    "@types/node": "^10.12.18",
+    "@typescript-eslint/eslint-plugin": "^1.1.0",
+    "@verdaccio/babel-preset": "0.0.3",
+    "@verdaccio/types": "beta",
     "codecov": "3.0.4",
     "cross-env": "5.2.0",
     "eslint": "5.6.1",
     "eslint-config-google": "0.10.0",
     "eslint-config-prettier": "3.1.0",
-    "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-jest": "21.24.1",
     "eslint-plugin-prettier": "3.0.0",
-    "flow-bin": "0.84.0",
-    "flow-runtime": "0.17.0",
     "husky": "0.14.3",
-    "jest": "23.6.0",
+    "jest": "^24.0.0",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3",
     "rmdir-sync": "1.0.1",
-    "standard-version": "4.4.0"
+    "standard-version": "4.4.0",
+    "typescript": "^3.2.4"
   },
   "keywords": [
     "verdaccio",
