chore(release): 2.0.0-beta.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verdaccio-memory",
-  "version": "1.0.3",
+  "version": "2.0.0-beta.0",
   "description": "storage implementation in memory",
   "main": "lib/index.js",
   "scripts": {
@@ -21,17 +21,17 @@
   "dependencies": {
     "@verdaccio/streams": "2.0.0-beta.0",
     "http-errors": "1.7.1",
-    "memory-fs": "^0.4.1"
+    "memory-fs": "0.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
     "@commitlint/travis-cli": "7.2.1",
-    "@types/http-errors": "^1.6.1",
-    "@types/jest": "^23.3.13",
-    "@types/memory-fs": "^0.3.2",
-    "@types/node": "^10.12.18",
-    "@typescript-eslint/eslint-plugin": "^1.1.0",
+    "@types/http-errors": "1.6.1",
+    "@types/jest": "23.3.13",
+    "@types/memory-fs": "0.3.2",
+    "@types/node": "10.12.18",
+    "@typescript-eslint/eslint-plugin": "1.1.0",
     "@verdaccio/babel-preset": "0.0.3",
     "@verdaccio/types": "beta",
     "codecov": "3.0.4",
@@ -42,12 +42,12 @@
     "eslint-plugin-jest": "21.24.1",
     "eslint-plugin-prettier": "3.0.0",
     "husky": "0.14.3",
-    "jest": "^24.0.0",
+    "jest": "24.0.0",
     "lint-staged": "7.3.0",
     "prettier": "1.14.3",
     "rmdir-sync": "1.0.1",
     "standard-version": "4.4.0",
-    "typescript": "^3.2.4"
+    "typescript": "3.2.4"
   },
   "keywords": [
     "verdaccio",
