--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,8 @@ jobs:
     steps:
       - checkout
       - run: yarn install --no-progress --registry https://registry.verdaccio.org --no-lockfile
-      - run: yarn run lint
-
-  test_8:
-    docker:
-      - image: circleci/node:8
-    steps:
-      - checkout
-      - run: yarn install --no-progress
-      - run: yarn run test
-
-  test_10:
-    docker:
-      - image: circleci/node:10
-    steps:
-      - checkout
-      - run: yarn install --no-progress
-      - run: yarn run test
+      - run: yarn lint
+      - run: yarn build
 
   test_11:
     docker:
@@ -30,19 +15,36 @@ jobs:
     steps:
       - checkout
       - run: yarn install --no-progress
-      - run: yarn run test
-      - run: yarn run coverage
+      - run: yarn test
+
+  test_10:
+    docker:
+      - image: circleci/node:10
+    steps:
+      - checkout
+      - run: yarn install --no-progress
+      - run: yarn test
+
+  test_8:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - run: yarn install --no-progress
+      - run: yarn test
+      - run: yarn coverage
 
 workflows:
   version: 2
   build_and_test:
     jobs:
+      - lint
       - test_11:
           requires:
             - lint
-      - test_8:
+      - test_10:
           requires:
             - lint
-      - test_10:
+      - test_8:
           requires:
             - lint
