--- a/package.json
+++ b/package.json
@@ -20,33 +20,33 @@
   },
   "dependencies": {
     "@verdaccio/streams": "2.0.0-beta.0",
-    "http-errors": "1.7.1",
+    "http-errors": "1.7.2",
     "memory-fs": "0.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.2.1",
-    "@commitlint/config-conventional": "7.1.2",
-    "@commitlint/travis-cli": "7.2.1",
+    "@commitlint/cli": "7.5.2",
+    "@commitlint/config-conventional": "7.5.0",
+    "@commitlint/travis-cli": "7.5.2",
     "@types/http-errors": "1.6.1",
-    "@types/jest": "23.3.13",
+    "@types/jest": "24.0.11",
     "@types/memory-fs": "0.3.2",
-    "@types/node": "10.12.18",
-    "@typescript-eslint/eslint-plugin": "1.1.0",
-    "@verdaccio/babel-preset": "0.0.3",
-    "@verdaccio/types": "5.0.0-beta.2",
-    "codecov": "3.0.4",
+    "@types/node": "11.12.1",
+    "@typescript-eslint/eslint-plugin": "1.5.0",
+    "@verdaccio/babel-preset": "0.1.0",
+    "@verdaccio/types": "5.0.0-beta.4",
+    "codecov": "3.2.0",
     "cross-env": "5.2.0",
-    "eslint": "5.6.1",
-    "eslint-config-google": "0.10.0",
-    "eslint-config-prettier": "3.1.0",
-    "eslint-plugin-jest": "21.24.1",
-    "eslint-plugin-prettier": "3.0.0",
+    "eslint": "5.15.3",
+    "eslint-config-google": "0.12.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-jest": "22.4.1",
+    "eslint-plugin-prettier": "3.0.1",
     "husky": "0.14.3",
-    "jest": "24.0.0",
+    "jest": "24.5.0",
     "lint-staged": "7.3.0",
-    "prettier": "1.14.3",
+    "prettier": "1.16.4",
     "rmdir-sync": "1.0.1",
-    "standard-version": "4.4.0",
+    "standard-version": "5.0.2",
     "typescript": "3.2.4"
   },
   "keywords": [
@@ -65,6 +65,9 @@
       "npm run lint",
       "git add"
     ]
+  },
+  "engines": {
+    "node": ">=8"
   },
   "author": "Juan Picado <juanpicado19@gmail.com>",
   "private": false,
