--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verdaccio-memory",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "storage implementation in memory",
   "main": "lib/index.js",
   "scripts": {
