--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "pretest": "npm run lint",
     "test": "jest",
     "precommit": "lint-staged",
-    "format": "prettier --single-quote --trailing-comma none --write \"{src,test}/**/*.js\"",
-    "lint": "eslint .",
+    "format": "prettier --single-quote --trailing-comma none --write \"{src,test}/**/*.ts\"",
+    "lint": "eslint . --ext .js,.ts",
     "coverage": "codecov",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "type-check": "tsc --noEmit",
@@ -19,7 +19,7 @@
     "build:js": "babel src/ --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
   },
   "dependencies": {
-    "@verdaccio/streams": "2.0.0-beta.0",
+    "@verdaccio/streams": "2.0.0",
     "http-errors": "1.7.2",
     "memory-fs": "0.4.1"
   },
@@ -30,21 +30,16 @@
     "@types/http-errors": "1.6.1",
     "@types/jest": "24.0.11",
     "@types/memory-fs": "0.3.2",
-    "@types/node": "11.12.1",
-    "@typescript-eslint/eslint-plugin": "1.5.0",
+    "@types/node": "11.13.8",
     "@verdaccio/babel-preset": "0.1.0",
-    "@verdaccio/types": "5.0.0-beta.4",
-    "codecov": "3.2.0",
+    "@verdaccio/eslint-config": "0.0.1",
+    "@verdaccio/types": "5.0.2",
+    "codecov": "3.3.0",
     "cross-env": "5.2.0",
-    "eslint": "5.15.3",
-    "eslint-config-google": "0.12.0",
-    "eslint-config-prettier": "4.1.0",
-    "eslint-plugin-jest": "22.4.1",
-    "eslint-plugin-prettier": "3.0.1",
+    "eslint": "5.16.0",
     "husky": "0.14.3",
-    "jest": "24.5.0",
+    "jest": "24.7.1",
     "lint-staged": "7.3.0",
-    "prettier": "1.16.4",
     "rmdir-sync": "1.0.1",
     "standard-version": "5.0.2",
     "typescript": "3.2.4"
