--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "module": "commonjs",
 		"declaration": true,
-		"noImplicitAny": false,
+		"noImplicitAny": true,
 		"strict": true,
 		"outDir": "lib",
     "allowSyntheticDefaultImports": true,
